# LambChat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_CN.md  SECURITY.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  run.py
.github/workflows/: backend-lint.yml  docker-build.yml  frontend-lint.yml  lint.yml
deploy/: .env.example  docker-compose.yml
docs/: mcp-distributed-optimization.md
docs/plans/: 2026-02-28-session-sandbox-binding-design.md  2026-02-28-session-sandbox-binding.md  2026-03-01-file-upload-design.md  2026-03-01-image-viewer-design.md  2026-03-01-image-viewer-implementation.md  2026-03-03-session-share-design.md  2026-03-03-user-pagination-design.md
docs/superpowers/plans/: 2026-04-28-assistant-system-prompt-marketplace.md
docs/superpowers/specs/: 2026-04-28-assistant-system-prompt-marketplace-design.md  2026-04-30-distributed-memory-health-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/scripts/: extract-i18n.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/constants/: index.ts
frontend/src/contexts/: ThemeContext.tsx  (+1 more)
nginx/: nginx.conf
scripts/: check_file_lines.sh  create_e2b_template.py  migrate_legacy_users.py
src/agents/: __init__.py
src/api/: __init__.py  deps.py  main.py
src/infra/: __init__.py  runtime_services.py  sandbox_grep.py  websocket.py
src/kernel/: __init__.py  config.py  events.py  exceptions.py  types.py
tests/: conftest.py  test_frontend_dependency_versions.py  test_mcp_role_access.py  test_mcp_role_quota.py  test_native_memory_backend.py  test_reveal_file_guidance.py  test_reveal_project_listing.py  test_sandbox_mcp_prompt_guidance.py  test_subagent_activity_logging_regression.py
tests/agents/: test_disabled_skills_config_propagation.py
tests/api/: test_shared_page_route.py
tests/infra/: test_channel_pubsub.py  test_checkpoint_memory_saver.py  test_distributed_memory_health.py  test_feishu_channel_dedupe.py  test_memory_monitor.py  test_mongodb_store_async_init.py  test_oauth_service.py  test_presenter_trace_metadata.py  test_presenter_unread.py  test_runtime_services.py  test_task_executor_trace_context.py  test_tool_search_cache.py  test_user_message_timestamp.py  test_websocket_manager.py
(+572 files in other folders)
